--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -68,7 +68,7 @@ HVR:
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Inherits@WithRA2VoxRender: ^WithRA2VoxRender
 	Valued:
-		Cost: 900
+		Cost: 1000
 	Tooltip:
 		Name: Hover MLRS
 	UpdatesPlayerStatistics:
@@ -184,7 +184,7 @@ MMCH:
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Inherits@renderVoxel: ^RenderVoxel
 	Valued:
-		Cost: 800
+		Cost: 900
 	Tooltip:
 		Name: Titan
 	UpdatesPlayerStatistics:
@@ -233,7 +233,7 @@ MMCH:
 		RequiresCondition: vulcan
 		MuzzleSequence: muzzle-vulcan
 	Armament@missile:
-		LocalOffset: 280,-475,545, 280,-475,735
+		LocalOffset: 280,-445,545, 280,-445,735
 		Weapon: TitanMissile
 		RequiresCondition: missile
 		Name: missile
@@ -273,7 +273,7 @@ MMCH:
 		RequiresCondition: vulcan
 	WithModelBarrel@missile:
 		Sequence: barrel-sam
-		LocalOffset: 0,-260,640
+		LocalOffset: 0,-230,640
 		RequiresCondition: missile
 		Armament: missile
 	Selectable:
@@ -281,7 +281,7 @@ MMCH:
 	Carryable:
 		LocalOffset: 0,0,577
 
-TITANUG.VULCAN:
+TITANUGVULCAN:
 	Inherits: ^VehiclePlug
 	Valued:
 		Cost: 200
@@ -290,14 +290,14 @@ TITANUG.VULCAN:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 80
-		Prerequisites: titan.vulcan, ~sd, ~techlevel.low
+		Prerequisites: titan.vulcan, ~gaweap, ~techlevel.medium
 		Description: Give Titan an additional vulcan.\n  Strong vs Infantry, Light armor\n  Weak vs Aircraft
 	Plug:
 		Type: titan.vulcan
 	RenderSprites:
 		Image: titanup.vulcan
 
-TITANUG.MISSILE:
+TITANUGMISSILE:
 	Inherits: ^VehiclePlug
 	Valued:
 		Cost: 300
@@ -306,7 +306,7 @@ TITANUG.MISSILE:
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 80
-		Prerequisites: titan.missile, ~sd, ~techlevel.low
+		Prerequisites: titan.missile, ~gaweap, ~techlevel.medium
 		Description: Give Titan an additional missile.\n  Strong vs Vehicles, Aircraft\n  Weak vs Infantry
 	Plug:
 		Type: titan.missile
@@ -319,7 +319,7 @@ HMEC:
 	Inherits@EXPERIENCE: ^GainsExperience
 	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Valued:
-		Cost: 3000
+		Cost: 4000
 	Tooltip:
 		Name: Mammoth Mk. II
 	UpdatesPlayerStatistics:
@@ -334,7 +334,7 @@ HMEC:
 		TurnSpeed: 12
 		Speed: 42
 	Health:
-		HP: 80000
+		HP: 100000
 	ChangesHealth:
 		Step: 500
 	Armor:
