--- a/mods/ts/mod.yaml
+++ b/mods/ts/mod.yaml
@@ -160,6 +160,7 @@ MapGrid:
 	Type: RectangularIsometric
 	MaximumTerrainHeight: 16
 	# SubCellOffsets: 0,0,0, -362,0,0, 0,362,0, 362,0,0
+	SubCellOffsets: 0,0,0, -256,128,0, 0,-128,0, 256,128,0
 	DefaultSubCell: 2
 
 WorldViewportSizes:
