地编笔刷系统初步

--- a/mods/ts/3dtest/meshes.yaml
+++ b/mods/ts/3dtest/meshes.yaml
@@ -67,6 +67,7 @@ rumya-2:
 	Meshes:
 		skirt-split: SportShorts
 			Material: sportshorts
+			UseDQBSkin: true
 		hair: lp-hair_pt2
 			Material: h-pt2
 
