--- a/mods/ts/rules/ai.yaml
+++ b/mods/ts/rules/ai.yaml
@@ -89,7 +89,7 @@ Player:
 		ProtectionScanRadius: 15
 		SuggestedGroundLeaderLocomotor: foot, wheeled, heavywheeled, tracked, critter, visceroid, smallvisc
 		SuggestedNavyLeaderLocomotor: Naval
-		GuerrillaTypes: smech, bggy, jumpjet, hvr, bike, subtank, stnk
+		GuerrillaTypes: smech, bggy, jumpjet, hvr, bike, subtank, stnk, commonkitten
 	UnitBuilderBotModule@test:
 		RequiresCondition: enable-test-ai
 		UnitQueues: Vehicle, Infantry, Air
@@ -119,6 +119,7 @@ Player:
 			orcab: 11
 			apache: 15
 			scrin: 14
+			commonkitten: 3
 		UnitLimits:
 			harv: 12
 			medic: 3
@@ -126,6 +127,7 @@ Player:
 			ghost: 1
 			cyc2: 1
 			hmec: 1
+			commonkitten: 1
 	McvManagerBotModule@test:
 		RequiresCondition: enable-test-ai
 		McvTypes: mcv
