--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -10,7 +10,7 @@ FireballLauncher:
 		Image: flameball
 		Sequences: idle1, idle2, idle3
 		Palette: blast-additive
-		Speed: 145, 155
+		Speed: 130, 145
 		LaunchAngle: 10
 		Width: 324
 		ShockDist: 5c768
@@ -24,14 +24,14 @@ FireballLauncher:
 		Chance: 5
 		InvalidTargets: Vehicle, Building, Wall
 	Warhead@fireDam: Spread3DDamage
-		Spread: 0c200
-		Damage: 120
-		Falloff: 100, 80, 35, 5
+		Spread: 0c220
+		Damage: 150
+		Falloff: 100, 80, 45, 15
 		ValidRelationships: Neutral, Enemy # no friendly damage
 		Versus:
-			None: 400
-			Wood: 135
-			Light: 60
+			None: 375
+			Wood: 125
+			Light: 75
 			Heavy: 5
 			Concrete: 2
 		DamageTypes: Prone70Percent, TriggerProne, FireDeath
@@ -54,6 +54,15 @@ GreenFireballLauncher:
 		Image: greenflameball
 		Speed: 65, 95
 		Blockable: false
+	Warhead@fireDam: Spread3DDamage
+		Spread: 0c330
+		Damage: 900
+		Versus:
+			None: 300
+			Wood: 100
+			Light: 100
+			Heavy: 55
+			Concrete: 35
 
 Bomb:
 	ReloadDelay: 60
