--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -1,6 +1,5 @@
 ^WithMeshTest:
 	WithMeshBody@body:
-		Mesh: body
 		SkeletonBinded: body
 	WithMesh@hair:
 		Mesh: hair
@@ -8,14 +7,20 @@
 	WithMesh@cater:
 		Mesh: cater
 		SkeletonBinded: body
-	WithMeshCloth@skirt:
-		Mesh: skirt-split
-		Masks: Hip
+	WithMeshCloth@gear01:
+		Mesh: gear01
+		Masks: Torso,Hip,Thigh,Leg,Foot,UpperArm,LowerArm,Hand
 		SkeletonBinded: body
-	WithMeshCloth@sweater:
-		Mesh: sweater
-		Masks: Torso
-		SkeletonBinded: body
+		HipMesh: gear01_body-hip
+		ThighMesh: gear01_body-thigh
+	# WithMeshCloth@skirt:
+	# 	Mesh: skirt-split
+	# 	Masks: Hip
+	# 	SkeletonBinded: body
+	# WithMeshCloth@sweater:
+	# 	Mesh: sweater
+	# 	Masks: Torso
+	# 	SkeletonBinded: body
 	BlendTreeHandler:
 		SkeletonToUse: body
 		Walk: walk
@@ -40,7 +45,7 @@
 	RenderMeshes:
 		Image: rumya
 		ZOffset: 15
-		Scale: 5
+		Scale: 15
 	AttachManager:
 	# AttachPoint@first:
 	# 	BoneAttach: a-s-Rig_Hand.R
@@ -51,7 +56,6 @@ RUTEST:
 	Inherits: ^Vehicle
 	Inherits@meshtest: ^WithMeshTest
 	Inherits@EXPERIENCE: ^GainsExperience
-	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
 	Valued:
 		Cost: 1200
 	Tooltip:
@@ -109,130 +113,128 @@ RUTEST2:
 		Turrets: primary, turret2
 		# FacingToTarget: true
 
-	WithSkeleton@turret2:
-		SkeletonDefine: turret-test2
-		Name: turret_skeleton2
-		AxisConvert: false
-	TurretAttachment@2:
-		Name: turret2
-		SkeletonBinded: body
-		AttachingBone: a-s-Rig_Hand.R
-		AttachmentSkeleton: turret_skeleton2
-		TurretBone: a-s-Base
-		BarrelBone: a-s-Barrel
-		Scale: 5
-		Mesh: turret
-		RotationSpeed: 3
-		BarrelRotationSpeed: 5
-		InitTurretAngle: 0
-		# TurretRotationMin: 0
-		# TurretRoataionMax: 180
-		InitBarrelAngle: 45
-		BarrelMaxDepression: 80
-		BarrelMaxElevation: 80
-		TurretFireAngleLimitation: true
-		BarrelFireAngleLimitation: false
-	AttachedArmament@2:
-		Weapon: ^VectorBooster
-		SkeletonToUse: body
-		FromBonePose: a-s-Rig_Head
-		FacingTolerance: 512
-		Turret: turret2
-	AttachedArmament@3:
-		Weapon: HarpyClaw
-		SkeletonToUse: turret_skeleton2
-		FromBonePose: firepose
-		FacingTolerance: 40
-		Turret: turret2
-	# Armament:
+	# WithSkeleton@turret2:
+	# 	SkeletonDefine: turret-test2
+	# 	Name: turret_skeleton2
+	# 	AxisConvert: false
+	# TurretAttachment@2:
+	# 	Name: turret2
+	# 	SkeletonBinded: body
+	# 	AttachingBone: a-s-Rig_Hand.R
+	# 	AttachmentSkeleton: turret_skeleton2
+	# 	TurretBone: a-s-Base
+	# 	BarrelBone: a-s-Barrel
+	# 	Scale: 5
+	# 	Mesh: turret
+	# 	RotationSpeed: 3
+	# 	BarrelRotationSpeed: 5
+	# 	InitTurretAngle: 0
+	# 	# TurretRotationMin: 0
+	# 	# TurretRoataionMax: 180
+	# 	InitBarrelAngle: 45
+	# 	BarrelMaxDepression: 80
+	# 	BarrelMaxElevation: 80
+	# 	TurretFireAngleLimitation: true
+	# 	BarrelFireAngleLimitation: false
+	# AttachedArmament@2:
+	# 	Weapon: ^VectorBooster
+	# 	SkeletonToUse: body
+	# 	FromBonePose: a-s-Rig_Head
+	# 	FacingTolerance: 512
+	# 	Turret: turret2
+	# AttachedArmament@3:
 	# 	Weapon: HarpyClaw
-	# 	Turret: primary
-	# 	LocalOffset: 1024,0,1024
+	# 	SkeletonToUse: turret_skeleton2
+	# 	FromBonePose: firepose
+	# 	FacingTolerance: 40
+	# 	Turret: turret2
+	Armament:
+		Weapon: HarpyClaw
+		Turret: primary
+		LocalOffset: 1024,0,1024
 	BlendTreeHandler:
 		DirectionTurret: primary
-	# WithMesh@Arrow:
-	# 	Mesh: arrow
 
 RUTEST3:
 	Inherits: RUTEST
-	RenderMeshes:
-		Image: rumya-2
-		ZOffset: 0
-		Scale: 10
-	Tooltip:
-		Name: Cat Girl Titan 2
-	Health:
-		HP: 300000
-	Buildable:
-		Queue: Vehicle
-		BuildPaletteOrder: 0
-		Prerequisites: naweap, natech, ~structures.nod
-	Mobile:
-		TurnSpeed: 34
-		Speed: 88
-		Locomotor: tracked
-		# AlwaysTurnInPlace: true
-	AttackTurreted:
-		Turrets: turret1, turret2
-		Voice: Attack
-		FiringAngle: 512
-		FacingToTarget: true
-		FacingToTargetTolerance: 12
-	WithSkeleton@turret1:
-		SkeletonDefine: turret-test
-		Name: turret_skeleton1
-	TurretAttachment@1:
-		Name: turret1
-		SkeletonBinded: body
-		AttachingBone: a-s-Rig_Hand.R
-		AttachmentSkeleton: turret_skeleton1
-		TurretBone: a-s-Base
-		BarrelBone: a-s-Barrel
-		Scale: 6
-		Mesh: turret
-		RotationSpeed: 3
-		BarrelRotationSpeed: 5
-		InitTurretAngle: -90
-		# TurretRotationMin: -180
-		# TurretRoataionMax: 0
-		InitBarrelAngle: 45
-		BarrelMaxDepression: 15
-		BarrelMaxElevation: 80
-		TurretFireAngleLimitation: true
-		BarrelFireAngleLimitation: false
-	AttachedArmament@1:
-		Weapon: ^SA
-		SkeletonToUse: turret_skeleton1
-		FromBonePose: firepose
-		FacingTolerance: 40
-		Turret: turret1
+# 	RenderMeshes:
+# 		Image: rumya-2
+# 		ZOffset: 0
+# 		Scale: 10
+# 	Tooltip:
+# 		Name: Cat Girl Titan 2
+# 	Health:
+# 		HP: 300000
+# 	Buildable:
+# 		Queue: Vehicle
+# 		BuildPaletteOrder: 0
+# 		Prerequisites: naweap, natech, ~structures.nod
+# 	Mobile:
+# 		TurnSpeed: 34
+# 		Speed: 88
+# 		Locomotor: tracked
+# 		# AlwaysTurnInPlace: true
+# 	AttackTurreted:
+# 		Turrets: turret1, turret2
+# 		Voice: Attack
+# 		FiringAngle: 512
+# 		FacingToTarget: true
+# 		FacingToTargetTolerance: 12
+# 	WithSkeleton@turret1:
+# 		SkeletonDefine: turret-test
+# 		Name: turret_skeleton1
+# 	TurretAttachment@1:
+# 		Name: turret1
+# 		SkeletonBinded: body
+# 		AttachingBone: a-s-Rig_Hand.R
+# 		AttachmentSkeleton: turret_skeleton1
+# 		TurretBone: a-s-Base
+# 		BarrelBone: a-s-Barrel
+# 		Scale: 6
+# 		Mesh: turret
+# 		RotationSpeed: 3
+# 		BarrelRotationSpeed: 5
+# 		InitTurretAngle: -90
+# 		# TurretRotationMin: -180
+# 		# TurretRoataionMax: 0
+# 		InitBarrelAngle: 45
+# 		BarrelMaxDepression: 15
+# 		BarrelMaxElevation: 80
+# 		TurretFireAngleLimitation: true
+# 		BarrelFireAngleLimitation: false
+# 	AttachedArmament@1:
+# 		Weapon: ^SA
+# 		SkeletonToUse: turret_skeleton1
+# 		FromBonePose: firepose
+# 		FacingTolerance: 40
+# 		Turret: turret1
 
-	WithSkeleton@turret2:
-		SkeletonDefine: turret-test
-		Name: turret_skeleton2
-	TurretAttachment@2:
-		Name: turret2
-		SkeletonBinded: body
-		AttachingBone: a-s-Rig_Hand.L
-		AttachmentSkeleton: turret_skeleton2
-		TurretBone: a-s-Base
-		BarrelBone: a-s-Barrel
-		Scale: 6
-		Mesh: turret
-		RotationSpeed: 3
-		BarrelRotationSpeed: 5
-		InitTurretAngle: 90
-		# TurretRotationMin: 0
-		# TurretRoataionMax: 180
-		InitBarrelAngle: 45
-		BarrelMaxDepression: 15
-		BarrelMaxElevation: 80
-		TurretFireAngleLimitation: true
-		BarrelFireAngleLimitation: false
-	AttachedArmament@2:
-		Weapon: ^VectorBooster
-		SkeletonToUse: turret_skeleton2
-		FromBonePose: firepose
-		FacingTolerance: 40
-		Turret: turret2
+# 	WithSkeleton@turret2:
+# 		SkeletonDefine: turret-test
+# 		Name: turret_skeleton2
+# 	TurretAttachment@2:
+# 		Name: turret2
+# 		SkeletonBinded: body
+# 		AttachingBone: a-s-Rig_Hand.L
+# 		AttachmentSkeleton: turret_skeleton2
+# 		TurretBone: a-s-Base
+# 		BarrelBone: a-s-Barrel
+# 		Scale: 6
+# 		Mesh: turret
+# 		RotationSpeed: 3
+# 		BarrelRotationSpeed: 5
+# 		InitTurretAngle: 90
+# 		# TurretRotationMin: 0
+# 		# TurretRoataionMax: 180
+# 		InitBarrelAngle: 45
+# 		BarrelMaxDepression: 15
+# 		BarrelMaxElevation: 80
+# 		TurretFireAngleLimitation: true
+# 		BarrelFireAngleLimitation: false
+# 	AttachedArmament@2:
+# 		Weapon: ^VectorBooster
+# 		SkeletonToUse: turret_skeleton2
+# 		FromBonePose: firepose
+# 		FacingTolerance: 40
+# 		Turret: turret2
 
