--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -66,7 +66,7 @@ RUTEST:
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 0
-		Prerequisites: gaweap, gatech, ~structures.gdi
+		Prerequisites: ~none
 	Mobile:
 		TurnSpeed: 66
 		Speed: 100
@@ -74,7 +74,7 @@ RUTEST:
 		# AlwaysTurnInPlace: true
 		# CanMoveBackward: true
 	Health:
-		HP: 200000
+		HP: 120000
 	Armor:
 		Type: Heavy
 	RevealsShroud:
@@ -136,12 +136,12 @@ RUTEST2:
 	# 	BarrelMaxElevation: 80
 	# 	TurretFireAngleLimitation: true
 	# 	BarrelFireAngleLimitation: false
-	# AttachedArmament@2:
-	# 	Weapon: ^VectorBooster
-	# 	SkeletonToUse: body
-	# 	FromBonePose: a-s-Rig_Head
-	# 	FacingTolerance: 512
-	# 	Turret: turret2
+	AttachedArmament@2:
+		Weapon: HoverMissile
+		SkeletonToUse: body
+		FromBonePose: a-s-Rig_Head
+		FacingTolerance: 512
+		Turret: turret2
 	# AttachedArmament@3:
 	# 	Weapon: HarpyClaw
 	# 	SkeletonToUse: turret_skeleton2
